# outception

./: .coderabbit.yaml  .gitignore  AGENTS.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  DEVELOPMENT.md  LICENSE  README.md  flake.nix  solo.yml
server/: .dockerignore  .env.template  .env.testing  AGENTS.md  Dockerfile  docker-compose.yml  init-readonly-user.sql  pyproject.toml
server/emails/: README.md  package.json
server/emails/src/: preview.ts
server/load_tests/: README.md  __init__.py  config.py  locustfile.py
server/load_tests/common/: test_data.py
server/migrations/: env.py  script.py.mako
server/migrations/versions/: 2026-06-17-1448_fix_ended_past_due_subscriptions.py  2026-06-17-1455_initial_migration_june_2026_squash.py  2026-06-19-1032_add_nullable_organization_id_to_support_.py  2026-06-19-1050_backfill_and_enforce_support_cases_.py  2026-06-19-1200_fix_custom_field_int32_bounds.py  2026-06-21-2218_add_promotion.py  2026-06-22-1956_remove_mor.py  2026-06-22-2224_drop_feedbacks.py  2026-06-22-2247_drop_notifications.py  2026-06-22-2320_drop_slack_apps.py  2026-06-23-1853_add_user_promotion_emails_enabled.py  2026-06-23-1941_add_user_followed_sources.py  2026-06-26-0000_widen_oauth2_client_id_columns.py  2026-06-27-0000_drop_org_mor_settings.py  2026-06-27-0100_drop_org_mor_account_fields.py  2026-06-27-0200_drop_org_review_subsystem.py  2026-06-27-0300_drop_org_invoice_checkout_fields.py  2026-06-28-2158_initial_squash_june_2026.py  2026-07-15-2122_initial_migration.py  2026-07-17-1508_hash_oauth2_client_secrets_at_rest.py  2026-07-19-2056_drop_promotion_body_column.py  2026-07-21-0038_widen_oauth_token_columns_to_text.py  2026-07-21-1644_add_promotion_category_status_composite_.py  2026-07-21-2302_drop_promotions_table.py  2026-07-21-2309_drop_user_promotion_emails_enabled.py
server/outception/: api.py  app.py  config.py  enums.py  exception_handlers.py  exceptions.py  locker.py  logfire.py  logging.py  middlewares.py  openapi.py  operational_errors.py  postgres.py  posthog.py  rate_limit.py  redis.py  routing.py  sentry.py  tasks.py  version.py
server/outception/auth/: authentication_session.py  dependencies.py  endpoints.py  exception_handlers.py  exceptions.py  factors.py  middlewares.py  models.py  permission.py  routing.py  schemas.py  scope.py  service.py  tasks.py
server/outception/authz/: dependencies.py  repository.py  service.py  types.py
server/outception/billing/: client.py  endpoints.py  service.py
server/outception/cli/: auth.py  endpoints.py  listener.py
server/outception/dummy/: tasks.py
server/outception/email/: react.py  repository.py  schemas.py  sender.py  tasks.py
server/outception/email_update/: endpoints.py  schemas.py  service.py  tasks.py
server/outception/eventstream/: endpoints.py  service.py  tasks.py
server/outception/health/: endpoints.py
server/outception/kit/: address.py  anonymization.py  email.py  http.py  jwt.py  math.py  pagination.py  routing.py  schemas.py  services.py  sorting.py  time_queries.py  trial.py  visibility.py
server/outception/link_preview/: extractor.py
server/outception/models/: __init__.py  authentication_session.py  backup_codes_enrollment.py  email_log.py  email_otp.py  email_verification.py  oauth2_authorization_code.py  oauth2_client.py  oauth2_grant.py  oauth2_state.py  oauth2_token.py  organization.py  organization_access_token.py  personal_access_token.py  promotion.py  totp_enrollment.py  user.py  user_followed_source.py  user_organization.py  user_session.py
server/outception/news/: auth.py  cache.py  endpoints.py  fetch.py  follows.py  metadata.py  registry.py  schemas.py  search.py  tasks.py  translate.py  weather.py
server/outception/oauth2/: authorization_server.py  constants.py  dependencies.py  exceptions.py  mcp_client.py  metadata.py  repository.py  schemas.py  sub_type.py  tasks.py  userinfo.py
server/outception/observability/: __init__.py  checkout_metrics.py  http_metrics.py  http_middleware.py  memory_profile.py  metrics.py  operational_errors.py  otel_prometheus.py  remote_write.py  slo.py  tax_metrics.py  utils.py
server/outception/organization/: auth.py  endpoints.py  repository.py  resolver.py  schemas.py  service.py  sorting.py  tasks.py
server/outception/organization_access_token/: auth.py  endpoints.py  repository.py  schemas.py  service.py  sorting.py  tasks.py
server/outception/personal_access_token/: endpoints.py  schemas.py  service.py  tasks.py
server/outception/promotion/: auth.py  endpoints.py  events.py  exceptions.py  notifications.py  repository.py  schemas.py  service.py  tasks.py
server/outception/user/: endpoints.py  oauth_service.py  repository.py  schemas.py  service.py  sorting.py  tasks.py
server/outception/user_organization/: repository.py  schemas.py  service.py
server/outception/worker/: __init__.py  _asyncio.py  _broker.py  _debounce.py  _encoder.py  _enqueue.py  _health.py  _httpx.py  _metrics.py  _queue_metrics.py  _redis.py  _runner.py  _sqlalchemy.py  _sqs.py  aws_lambda.py  run.py  run_without_db.py  scheduler.py  sqs.py
server/polar/: api.py  app.py  config.py  operational_errors.py  rate_limit.py  tasks.py
server/scripts/: backfill_close_orphan_appeal_cases.py  backfill_held_payouts_capability.py  backfill_plain_tenants.py  backfill_plain_thread_tenants.py  backfill_sandbox_orgs_active.py  backfill_support_tiers.py  checkout_require_3ds_backfill.py  db.py  discount_amounts_backfill.py  enable_payments.py  enqueue_dummy_tasks.py  eval_organization_reviews.py  fix_organizations_socials_links.py  generate_openapi.py  helper.py  lint_subquery.py  loadtest_setup.py  migrate_organization_statuses.py  org_presentment_currency_backfill.py  plain_comm.py  prepare_organizations_members.py  preview.py  reconcile_tinybird_events.py  remove_deprecated_scopes.py  remove_unused_feature_flags.py  reset_unconfigured_grandfathered_orgs.py  review_grandfathered_orgs.py  shell.py  snooze_stale_reviews.py  tinybird.py
server/tests/: conftest.py  test_config.py  test_rate_limit.py
(+1001 files in other folders)
